# Smart-TV

./: CMakeLists.txt  Makefile.win  Smart TV.dev  Smart TV.layout  main.cpp
Header Files/: App.h  Ator.h  Diretor.h  Filme.h  Pessoa.h  Producoes.h  Serie.h  SmartTV.h  Streaming.h  Time.h
Resource Files/: App.cpp  Ator.cpp  Diretor.cpp  Filme.cpp  Pessoa.cpp  Producoes.cpp  Serie.cpp  SmartTV.cpp  Streaming.cpp  Time.cpp
