cmake_minimum_required(VERSION 3.24)
project(Smart_TV)

set(CMAKE_CXX_STANDARD 11)

add_executable(Smart_TV main.cpp "Header Files/App.h" "Header Files/Ator.h" "Header Files/Diretor.h" "Header Files/Pessoa.h" "Header Files/Time.h" "Resource Files/App.cpp" "Resource Files/Ator.cpp" "Resource Files/Diretor.cpp" "Resource Files/Pessoa.cpp" "Resource Files/Time.cpp" "Header Files/Producoes.h" "Header Files/Producoes.h" "Resource Files/Producoes.cpp" "Resource Files/Producoes.cpp" "Resource Files/Producoes.cpp" "Header Files/Filme.h" "Header Files/Filme.h" "Resource Files/Filme.cpp" "Resource Files/Filme.cpp" "Header Files/Serie.h" "Resource Files/Serie.cpp" "Resource Files/Serie.cpp")
